// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input element Should render the component 1`] = `
<input
  className="tribe-editor__input"
  type="text"
/>
`;

exports[`Input element Should render the component with class 1`] = `
<input
  className="tribe-editor__input input-class"
  type="text"
/>
`;

exports[`Input element Should render the component with extra props 1`] = `
<input
  className="tribe-editor__input"
  onChange={[Function]}
  type="text"
/>
`;
